--- a/stationary.html
+++ b/stationary.html
@@ -3,7 +3,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Stationary</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -296,7 +296,7 @@ input:disabled{
             <ul class="dropdown-menu">
                 <li><a href="#">Profile</a></li>
                 <li><a href="#">Orders</a></li>
-                <li><a href=project.html>Logout    <span class="glyphicon glyphicon-log-out"></span></a></li>
+                <li><a href=login.html>Logout    <span class="glyphicon glyphicon-log-out"></span></a></li>
             </ul>
         <li><a href="#"><span class="glyphicon glyphicon-shopping-cart my-cart-icon"><span class="badge badge-notify my-cart-badge"></span></span></a></li>
       </ul>
